objects/Opportunity_Product_Type__c.object
<CustomObject>
    <fields>
        <fullName>Closed_New_Sales_95_100__c</fullName>
        <formula>CASE(Opportunity__r.StageName, &quot;95%&quot;, Incremental_Amount_Personal_Currency__c, &quot;100%&quot;, Incremental_Amount_Personal_Currency__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed New Sales (95% &amp; 100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Renewals_95_100__c</fullName>
        <formula>CASE(Opportunity__r.StageName, &quot;95%&quot;, Renewal_Amount_Personal_Currency__c, &quot;100%&quot;, Renewal_Amount_Personal_Currency__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Renewals (95% &amp; 100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Closed_New_Sales_90_95_100__c</fullName>
        <formula>CASE(Opportunity__r.StageName, 
&quot;90%&quot;, Incremental_Amount_Personal_Currency__c, 
&quot;95%&quot;, Incremental_Amount_Personal_Currency__c, 
&quot;100%&quot;, Incremental_Amount_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed New Sales (90%,95%,100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Closed_New_Sales_Forecast_Cat__c</fullName>
        <formula>CASE(Opportunity__r.ForecastCategoryName, 
&quot;Commit&quot;, Incremental_Amount_Personal_Currency__c, 
&quot;Closed&quot;, Incremental_Amount_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed New Sales (Forecast Cat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Closed_Renewals_90_95_100__c</fullName>
        <formula>CASE(Opportunity__r.StageName, 
&quot;90%&quot;, Renewal_Amount_Personal_Currency__c, 
&quot;95%&quot;, Renewal_Amount_Personal_Currency__c, 
&quot;100%&quot;, Renewal_Amount_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed Renewals (90%,95%,100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Closed_Renewals_Forecast_Cat__c</fullName>
        <formula>CASE(Opportunity__r.ForecastCategoryName, 
&quot;Commit&quot;, Renewal_Amount_Personal_Currency__c, 
&quot;Closed&quot;, Renewal_Amount_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed Renewals (Forecast Cat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_to_Corporate__c</fullName>
        <formula>Case( CurrencyIsoCode, 
&quot;HKD&quot;, 7.8500, 
&quot;GBP&quot;, 0.6178, 
&quot;USD&quot;, 1.000, 
&quot;NZD&quot;, 1.2142, 
&quot;AUD&quot;, 0.9868, 
&quot;CNY&quot;, 6.3600, 
&quot;EUR&quot;, 0.7720, 
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate to Corporate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hoopla_Secondary__c</fullName>
        <label>Hoopla Secondary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incr_Amount_Rnwl_Amount_Personal_Curr__c</fullName>
        <formula>Incremental_Amount_Renewal_Amount__c/ Exchange_Rate_to_Corporate__c*
( 
Case($User.User_Currency_Custom__c, 
&quot;EUR&quot;, 0.7720, 
&quot;GBP&quot;, 0.6178, 
&quot;HKD&quot;, 7.8500, 
&quot;NZD&quot;, 1.2142, 
&quot;USD&quot;, 1.000, 
&quot;CNY&quot;, 6.3600, 
&quot;AUD&quot;, 0.9868, 
1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incr Amount+Rnwl Amount (Personal Curr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Amount_Personal_Currency__c</fullName>
        <formula>Incremental_Amount__c/ Exchange_Rate_to_Corporate__c*
( 
Case($User.User_Currency_Custom__c, 
&quot;EUR&quot;, 0.7720, 
&quot;GBP&quot;, 0.6178, 
&quot;HKD&quot;, 7.8500, 
&quot;NZD&quot;, 1.2142, 
&quot;USD&quot;, 1.000, 
&quot;CNY&quot;, 6.3600, 
&quot;AUD&quot;, 0.9868, 
1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incremental Amount (Personal Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Amount_Renewal_Amount__c</fullName>
        <formula>Incremental_Amount__c  +  Renewal_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incremental Amount + Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Amount__c</fullName>
        <label>Incremental Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Sales_75_100__c</fullName>
        <formula>IF(TEXT(Opportunity__r.StageName) = &quot;75%&quot;, Incremental_Amount_Personal_Currency__c, 
IF(LEFT(TEXT(Opportunity__r.StageName),1) = &quot;9&quot;, Incremental_Amount_Personal_Currency__c, 
IF(TEXT(Opportunity__r.StageName) = &quot;100%&quot;, Incremental_Amount_Personal_Currency__c, 
null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Sales 75%-100%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName +&apos; &apos;+Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>Text(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Product_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Business Law Center</fullName>
                </value>
                <value>
                    <fullName>CD/DVD</fullName>
                </value>
                <value>
                    <fullName>Checkpoint World</fullName>
                </value>
                <value>
                    <fullName>CLEAR-CI</fullName>
                </value>
                <value>
                    <fullName>CLEAR-CI Partnerships</fullName>
                </value>
                <value>
                    <fullName>CLEAR-CI Products</fullName>
                </value>
                <value>
                    <fullName>CLEAR-GI</fullName>
                </value>
                <value>
                    <fullName>Concourse</fullName>
                </value>
                <value>
                    <fullName>CONTRACT EXPRESS</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Data Privacy Advisor</fullName>
                </value>
                <value>
                    <fullName>Dockets</fullName>
                </value>
                <value>
                    <fullName>E-Recruitment</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hosted Solutions</fullName>
                </value>
                <value>
                    <fullName>Hubbard</fullName>
                </value>
                <value>
                    <fullName>Lead Solutions</fullName>
                </value>
                <value>
                    <fullName>Managed Services (LMS)</fullName>
                </value>
                <value>
                    <fullName>Mass torts</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Online (Non-Westlaw)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Peer Monitor</fullName>
                </value>
                <value>
                    <fullName>PL – Practical Law</fullName>
                </value>
                <value>
                    <fullName>Practical Law Connect</fullName>
                </value>
                <value>
                    <fullName>Practitioner Insights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <inlineHelpText>Values are dependent on the selected Product value</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>33 Act</fullName>
                </value>
                <value>
                    <fullName>34 Act</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>Blog Services</fullName>
                </value>
                <value>
                    <fullName>BoardLink</fullName>
                </value>
                <value>
                    <fullName>Brief Tools</fullName>
                </value>
                <value>
                    <fullName>Business Citator</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Case Logistix</fullName>
                </value>
                <value>
                    <fullName>CD-ROM/DVD</fullName>
                </value>
                <value>
                    <fullName>Cite Advisor</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>CNB/TimeLine</fullName>
                </value>
                <value>
                    <fullName>Correctional Facilities</fullName>
                </value>
                <value>
                    <fullName>Cowels</fullName>
                </value>
                <value>
                    <fullName>DealProof</fullName>
                </value>
                <value>
                    <fullName>Docket Calendar</fullName>
                </value>
                <value>
                    <fullName>DocketWatch</fullName>
                </value>
                <value>
                    <fullName>Drafting Assistant</fullName>
                </value>
                <value>
                    <fullName>DRR</fullName>
                </value>
                <value>
                    <fullName>EDGARfilings</fullName>
                </value>
                <value>
                    <fullName>EDGAR Filing Service</fullName>
                </value>
                <value>
                    <fullName>EDGARforms</fullName>
                </value>
                <value>
                    <fullName>EDGARizer</fullName>
                </value>
                <value>
                    <fullName>EDGARizerX</fullName>
                </value>
                <value>
                    <fullName>Enterprise KM</fullName>
                </value>
                <value>
                    <fullName>Exposure Pack</fullName>
                </value>
                <value>
                    <fullName>FedPubs In-house</fullName>
                </value>
                <value>
                    <fullName>FedPubs IS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>Values are dependent on the selected Product value</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1Point</fullName>
                </value>
                <value>
                    <fullName>33 Act</fullName>
                </value>
                <value>
                    <fullName>34 Act</fullName>
                </value>
                <value>
                    <fullName>3rd Party Risk MGMT</fullName>
                </value>
                <value>
                    <fullName>Abstraction</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>ALB IHC Seminar</fullName>
                </value>
                <value>
                    <fullName>ALB Law Awards</fullName>
                </value>
                <value>
                    <fullName>ALB Online</fullName>
                </value>
                <value>
                    <fullName>ALB Other</fullName>
                </value>
                <value>
                    <fullName>ALB Print</fullName>
                </value>
                <value>
                    <fullName>All US Practice Areas (AUSPA)</fullName>
                </value>
                <value>
                    <fullName>Antitrust</fullName>
                </value>
                <value>
                    <fullName>Anti-Trust</fullName>
                </value>
                <value>
                    <fullName>Anti-Trust Plus</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Archbold HK</fullName>
                </value>
                <value>
                    <fullName>Attorney Growth/Up-Band</fullName>
                </value>
                <value>
                    <fullName>AttorneyJobs</fullName>
                </value>
                <value>
                    <fullName>AUS/NZ Print</fullName>
                </value>
                <value>
                    <fullName>AUS/NZ Subscription</fullName>
                </value>
                <value>
                    <fullName>AUSPA</fullName>
                </value>
                <value>
                    <fullName>Bair Hugger</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>BDP Foundations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>CD/DVD</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Seminars</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>West Professional Development</fullName>
                </value>
                <value>
                    <fullName>Westlaw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Amount_Personal_Currency__c</fullName>
        <formula>Renewal_Amount__c/ Exchange_Rate_to_Corporate__c*
( 
Case($User.User_Currency_Custom__c, 
&quot;EUR&quot;, 0.7720, 
&quot;GBP&quot;, 0.6178, 
&quot;HKD&quot;, 7.8500, 
&quot;NZD&quot;, 1.2142, 
&quot;USD&quot;, 1.000, 
&quot;CNY&quot;, 6.3600, 
&quot;AUD&quot;, 0.9868, 
1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Amount (Personal Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Amount__c</fullName>
        <label>Renewal Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_75_100__c</fullName>
        <formula>IF(TEXT(Opportunity__r.StageName) = &quot;75%&quot;, Renewal_Amount_Personal_Currency__c, 
IF(LEFT(TEXT(Opportunity__r.StageName),1) = &quot;9&quot;, Renewal_Amount_Personal_Currency__c, 
IF(TEXT(Opportunity__r.StageName) = &quot;100%&quot;, Renewal_Amount_Personal_Currency__c, 
null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewals 75%-100%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Pricing</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>